crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__agent_capability.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────
 ? 0   ! 1   ⏸︎ 0   ✓ 0  ⢿ 0   ○ 0

▏⑂ feature-migration ┄┄┄┄┄┄┄┄┄┄┄┄
▌! claude · Opus · 1m
▌  db migrate
▌  ▢ ──────────────────────    0%
                       ? for help
