crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__agent_card_context_compactions.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                        ⢿ 1   ○ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄▕
▌⣾ claude · Opus 4.8 · high · 200k                $1.27▐
▌  ledger refactor                                     ▐
▌  ▣ ━━━━━━━━━━━━━━╸━━─────────────────────────── 38.2%▐
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k · ↻ 2                  ▐

                                             ? for help
