crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__background_shell_entries.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 0   ☾ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌☾ claude                                            ▐
▌  wakes in 12m                                      ▐
▌  ▢ ──────────────────────────────────────────    0%▐
▌  ▤ 0                                               ▐
▌  ⧖ waits (6)                                       ▐
▌    ◷ in 12m                                   ◔ <1m▐
▌    ⣾ make check                               ◔ <1m▐
▌    ⣾ Run the test suite                       ◔  5m▐
▌      cargo test --workspace                        ▐
▌    ⣾ cat <<'EOF' > notes foo EOF              ◔  2m▐
▌    ⣾ background job                           ◔  1m▐
▌    ⌁ pr.merged                                ◔ <1m▐

 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
