crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__card_density_compact_resting_statuses.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 7                                            $0.00
 ────────────────────────────────────────────────────
 ? 1   ! 1   ⏸︎ 1   ✓ 1                ⢿ 1   ☾ 0   ○ 2

 ⑂ main
 ? waiter · opus · high · 200k
   waiting task
   ▣ ━━━━━━━━━━━━━━╺━━━────────────────────────   42%
 ! failed · opus · high · 200k
   failed task
 ⏸︎ paused · opus · high · 200k
   paused task
 ✓ done · opus · high · 200k
   done task
 ⣾ runner · opus · high · 200k
   running task
   ▣ ━━━━━━━━━━━━╺━━━──────────────────────────   38%
 ○ idlebot · opus · high

▎⑂ other ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌○ selector · opus · high                            ▐
▌  selected other                                    ▐
▌  ▢ ──────────────────────────────────────────    0%▐
 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
