crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__card_density_expanded_non_selected_subagents.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 2                                            $0.00
 ────────────────────────────────────────────────────
 ? 1   ! 0   ⏸︎ 0   ✓ 0                ⢿ 0   ☾ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌? asker · opus · high · 200k                        ▐
▌  needs review                                      ▐
▌  ▣ ━━━━━━━━━━╺━━─────────────────────────────   30%▐
▌  ▤ 30k · ◌ 24k ↘ 6k ↗ 1k                           ▐
▎☾ claude · opus · high · 200k                       🮇
▎  wakes in 12m                                      🮇
▎  ▢ ──────────────────────────────────────────    0%🮇
▎  ▤ 0                                               🮇
▎  ⧉ subagents (1) · ⧖ waits (1)                $0.42🮇
▎    ✓ Explore · map the render path            $0.42🮇
▎      ▤ 30k · opus · high                      ◔  1m🮇
▎    ◷ timer · in 12m                           ◔  4m🮇
 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
