crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__child_clocks_nerd_font.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
▎ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⢄ claude                                            ▐
▌  —                                                 ▐
▌  󱇙 ──────────────────────────────────────────    0%▐
▌  󰿦 0                                               ▐
▌   subagents (1)                                   ▐
▌    ⣾ Explore                                       ▐
▌      Haiku                                       2h▐

▎ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⢄ claude                                            ▐
▌  —                                                 ▐
▌  󱇙 ──────────────────────────────────────────    0%▐
▌  󰿦 0                                               ▐
▌   subagents (1)                                   ▐
▌    ⣾ Explore                                       ▐
▌      Haiku                                    󰪠  8m▐

▎ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ claude                                            ▐
▌  —                                                 ▐
▌  󱇙 ──────────────────────────────────────────    0%▐
▌  󰿦 0                                               ▐
▌   subagents (1)                                   ▐
▌     Explore · silent 40m                          ▐
▌      Haiku                                    ◉ <t>▐
